Add Website Title in settings.ini

--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -22,7 +22,9 @@
 
 <!-- Primary Meta Tags -->
 <title>
-    Django Dashboard - {% block title %}{% endblock %} | AppSeed
+
+    {{apptitle}} - {% block title %}{% endblock %}
+
 </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
