--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -23,7 +23,7 @@
 <!-- Primary Meta Tags -->
 <title>
 
-    {{apptitle}} - {% block title %}{% endblock %}
+    {{app_title}} - {% block title %}{% endblock %}
 
 </title>
 
@@ -72,7 +72,7 @@
 </head>
 
 <body>
-
+    <h1>{{app_title}}</h1>
     <nav class="navbar navbar-dark navbar-theme-primary px-4 col-12 d-md-none">
         <a class="navbar-brand mr-lg-5" href="/">
             <img class="navbar-brand-dark" src="/static/assets/img/brand/light.svg" alt="Volt logo" /> <img class="navbar-brand-light" src="/static/assets/img/brand/dark.svg" alt="Volt logo" />
