Move in settings.ini setting for base template

--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -1,5 +1,5 @@
 
-{% extends "layouts/base-fullscreen.html" %}
+{% extends base_template %}
 {% load i18n %}
 
 {% block title %} Login {% endblock %} 
