--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base-fullscreen.html" %}
+{% extends base_template %}
 {% load i18n %}
 {% block title %} Register {% endblock %} 
 
