--- a/customers/templates/customers/profile.html
+++ b/customers/templates/customers/profile.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% extends base_template %}
 {% load static %}
 {% load i18n %}
 {% block title %} Settings {% endblock %}
