--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,12 +1,12 @@
-{% extends "layouts/base.html" %}
+{% extends base_template %}
 {% load static %}
 {% load i18n %}
 {% block title %} Home {% endblock %}
 {% block content %}
-{% include 'includes/navigation.html' %}
+
 <div class="container">
     <div class="row">
-<h1>Home App 1</h1>
+<h1>Dieses ist die Home Site von der App #1</h1>
     </div>
 </div>
 {% endblock content %}
