--- a/customers/templates/customers/profile_light.html
+++ b/customers/templates/customers/profile_light.html
@@ -68,9 +68,10 @@
 {% endblock stylesheets %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
       integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous"/>
-{% include 'includes/navigation.html' %}
+
 {% block content %}
-  <div class="container">
+{% include 'includes/navigation.html' %}
+  <div class="">
     <div class="row">
 
 
