--- a/core/templates/layouts/base-dark.html
+++ b/core/templates/layouts/base-dark.html
@@ -66,29 +66,23 @@
                 <div class="dropdown-menu dropdown-menu-end navbar-dropdown preview-list" aria-labelledby="profileDropdown">
                   <h6 class="p-3 mb-0">{% trans 'Profile' %}</h6>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
+                  <a class="dropdown-item preview-item" href="{% url 'profile' %}">
                     <div class="preview-thumbnail">
-                      <div class="preview-icon bg-dark rounded-circle">
-                        <i class="mdi mdi-cog text-success"></i>
-                      </div>
+                      <i class="fa fa-cog" aria-hidden="true"></i>
                     </div>
                     <div class="preview-item-content">
                       <p class="preview-subject mb-1">{% trans 'Settings' %}</p>
                     </div>
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                      <div class="preview-icon bg-dark rounded-circle">
-                        <i class="mdi mdi-logout text-danger"></i>
-                      </div>
-                    </div>
-                    <div class="preview-item-content">
-                      <p class="preview-subject mb-1">{% trans 'Log out' %}</p>
-                    </div>
+
+                    <form method="post" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button class="dropdown-item font-weight-bold" type="submit"><span class="fas fa-sign-out-alt text-danger"></span>{% trans 'Logout' %}</a></button>
+</form>
                   </a>
 
-                </div>
+
               </li>
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
