--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -6,7 +6,8 @@
 
 <div class="container">
     <div class="row">
-<h1>Dieses ist die Home Site von der App #1</h1>
+
+<h1>Dieses ist die Home Site von der {{app_title}}</h1>
     </div>
 </div>
 {% endblock content %}
