--- a/core/templates/layouts/base-fullscreen.html
+++ b/core/templates/layouts/base-fullscreen.html
@@ -69,10 +69,10 @@
 
 </head> 
 <body class="{% block body_class %}{% endblock body_class %}">
-
-
+<div class="container">
+    {% include 'includes/navigation.html' %}
     {% block content %}{% endblock content %}
-
+</div>
     {% include 'includes/scripts.html' %}    
     
     <!-- Specific Page JS goes HERE  -->
