--- a/customers/templates/customers/profile_light.html
+++ b/customers/templates/customers/profile_light.html
@@ -279,7 +279,7 @@
         </div>
         <div class="col-12 mt-3">
                         <div class="card card-body bg-white border-light shadow-sm mb-4">
-{% include 'includes/contact_us.html %}
+{% include 'includes/contact_us.html' %}
                                </div>
                     </div>
 </div>
