--- a/core/templates/includes/navigation.html
+++ b/core/templates/includes/navigation.html
@@ -36,6 +36,7 @@
                     </a>
                     <div class="dropdown-menu dashboard-dropdown dropdown-menu-right mt-2">
                       <a class="dropdown-item font-weight-bold" href="{% url 'profile' %}"><span class="fas fa-cog"></span>{% trans 'Settings' %}</a>
+                        <a class="dropdown-item font-weight-bold" href="{% url 'log_view' %}"><span class="fas fa-history"></span>{% trans 'Log' %}</a>
                       <div role="separator" class="dropdown-divider"></div>
                         <form method="post" action="{% url 'logout' %}">
     {% csrf_token %}
