--- a/core/templates/includes/navigation.html
+++ b/core/templates/includes/navigation.html
@@ -20,9 +20,11 @@
 
                   <li class="nav-item dropdown">
                     <a class="nav-link pt-1 px-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <div class="media d-flex align-items-center">
+                      <div class="media d-flex   align-items-center">
 
                         <div class="media-body ml-2 text-dark align-items-center d-none d-lg-block">
+
+                            <h4>{{ user.username }}</h4>
                           <span class="mb-0 font-small font-weight-bold">
                             {% if user.profile.image %}
                                         <img class="rounded-circle" style="width: 50px"
@@ -30,6 +32,7 @@
                                         {% else %}
                                         <i class="fas fa-fw fa-user position-absolute top-50 start-50 translate-middle text-secondary"></i>
                                         {% endif %}
+
                           </span>
                         </div>
                       </div>
