--- a/app/templates/logtableview.html
+++ b/app/templates/logtableview.html
@@ -13,7 +13,7 @@
 
         <div class="col-12">
 
-<table class="table table-striped">
+<table class="table .table-responsive table-striped">
   <thead>
     <tr>
       <th scope="col">#</th>
