--- a/app/templates/logtableview.html
+++ b/app/templates/logtableview.html
@@ -11,9 +11,9 @@
     <div class="row">
 
 
-        <div class="col-12">
+        <div class="col-12 table-responsive">
 
-<table class="table table-responsive table-striped">
+<table class="table  table-striped">
   <thead>
     <tr>
       <th scope="col">#</th>
