Log ins Menü eingebaut

--- a/core/templates/layouts/base-dark.html
+++ b/core/templates/layouts/base-dark.html
@@ -81,6 +81,7 @@
     <button class="dropdown-item font-weight-bold" type="submit"><span class="fas fa-sign-out-alt text-danger"></span>{% trans 'Logout' %}</a></button>
 </form>
                   </a>
+                    <a class="dropdown-item font-weight-bold" href="{% url 'log_view' %}"><span class="fas fa-history"></span>{% trans 'Log' %}</a>
 
 
               </li>
