Fix bug that in dark theme in contact us Form background color white is wrong

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -10,7 +10,7 @@
 <h1>Dieses ist die Home Site von der {{app_title}}</h1>
     </div>
     <div class="col-12 mt-3">
-                        <div class="card card-body bg-white border-light shadow-sm mb-4">
+                        <div class="card card-body border-light shadow-sm mb-4">
 {% include 'includes/contact_us.html' %}
                                </div>
                     </div>
