Implement further views

--- a/core/templates/energy/energy_base_template.html
+++ b/core/templates/energy/energy_base_template.html
@@ -40,6 +40,8 @@
                     <nav class="bd-links collapse" id="bd-docs-nav">
                         <ul class="left-options">
                             <li class="left-option active" id="Dashboard"><a
+                                    href="{% url 'home' %}">{% trans 'Home' %}</a></li>
+                            <li class="left-option active" id="Dashboard"><a
                                     href="{% url 'dashboard' %}">{% trans 'Dashboard' %}</a></li>
 
                             <li class="left-option" id="Cost"><a
