--- a/core/templates/normaltemplate/base.html
+++ b/core/templates/normaltemplate/base.html
@@ -15,7 +15,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Inance</title>
+  <title>Energy Dashboard</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -28,11 +28,26 @@
   <link href="{% static 'newtemplate/css/style.css' %}" rel="stylesheet" />
   <!-- responsive style -->
   <link href="{% static 'newtemplate/css/responsive.css' %}" rel="stylesheet" />
+  <style>
+    #logout-form {
+  display: inline;
+}
+#logout-form button {
+  background: none;
+  border: none;
+  cursor: pointer;
+
+
+}
+
+  </style>
 {% block extrastyles %}
   {% endblock %}
 </head>
 
 <body>
+{% block backgroundimage %}
+{% endblock %}
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -70,17 +85,30 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="{% url 'home' %}">{% trans 'Home' %} <span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'contactus' %}">{% trans 'Contact Us' %}</a>
+                </li>
+                {% if not request.user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">{% trans 'Login' %}</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'dashboard' %}">{% trans 'pers. Bereich' %}</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <form id="logout-form"  method="post" action="{% url 'admin:logout' %}">
+  {% csrf_token %}
+  <button type="submit" class="nav-link">{% translate "Log out" %}</button>
+</form>
+
+
+
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
+                {% endif %}
               </ul>
             </div>
           </nav>
