--- a/core/templates/includes/navigation_old.html
+++ b/core/templates/includes/navigation_old.html
@@ -40,15 +40,14 @@
                       </div>
                     </a>
                     <div class="dropdown-menu dashboard-dropdown dropdown-menu-right mt-2">
-
-                        {% if not request.user.is_authenticated %}
-
-                  <a class="dropdown-item font-weight-bold" href="{% url 'login' %}"><span class="fas fa-sign-out-alt"></span>{% trans 'Login' %}</a>
-
-                        {% else %}
-                        <a class="dropdown-item font-weight-bold" href="{% url 'profile' %}"><span class="fas fa-cog"></span>{% trans 'Settings' %}</a>
+                      <a class="dropdown-item font-weight-bold" href="{% url 'profile' %}"><span class="fas fa-cog"></span>{% trans 'Settings' %}</a>
                         <a class="dropdown-item font-weight-bold" href="{% url 'log_view' %}"><span class="fas fa-history"></span>{% trans 'Log' %}</a>
                       <div role="separator" class="dropdown-divider"></div>
+                        {% if not request.user.is_authenticated %}
+                        <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">{% trans 'Login' %}</a>
+                </li>
+                        {% else %}
                         <form method="post" action="{% url 'logout' %}">
     {% csrf_token %}
     <button class="dropdown-item font-weight-bold" type="submit"><span class="fas fa-sign-out-alt text-danger"></span>{% trans 'Logout' %}</a></button>
