Implement Normaltemplate/base.html in all dashboard/profile/documents views

--- a/core/templates/contactus.html
+++ b/core/templates/contactus.html
@@ -1,4 +1,4 @@
-{% extends template %}
+{% extends 'normaltemplate/base.html' %}
 
 {% load i18n %}
 
@@ -22,7 +22,7 @@
 
 {% block content %}
 
-<div id="content-body" class="col-12 col-md-9 col-xl-10 pl-4 pr-4 bd-content">
+<div id="content-body" class="col-12 col-md-9 col-xl-12 pl-4 pr-4 bd-content">
     <div class="row">
         <div class="col-md-12 pt-4 mt-3"><h2>{% trans 'Contact Us' %}</h2></div>
     </div>
